[gd_scene load_steps=22 format=2]

[ext_resource path="res://img/exploNave/exploNave4.png" type="Texture" id=1]
[ext_resource path="res://scripts/nave.gd" type="Script" id=2]
[ext_resource path="res://img/sprites/navecima.png" type="Texture" id=3]
[ext_resource path="res://img/exploNave/exploNave1.png" type="Texture" id=4]
[ext_resource path="res://img/exploNave/exploNave3.png" type="Texture" id=5]
[ext_resource path="res://img/sprites/naveDano1.png" type="Texture" id=6]
[ext_resource path="res://img/sprites/naveDano.png" type="Texture" id=7]
[ext_resource path="res://img/exploNave/exploNave2.png" type="Texture" id=8]
[ext_resource path="res://img/exploNave/exploNave6.png" type="Texture" id=9]
[ext_resource path="res://img/exploNave/exploNave5.png" type="Texture" id=10]
[ext_resource path="res://img/exploNave/exploNave7.png" type="Texture" id=11]
[ext_resource path="res://img/animaNave/asteroids - boss/run2.png" type="Texture" id=12]
[ext_resource path="res://img/animaNave/asteroids - boss/run5.png" type="Texture" id=13]
[ext_resource path="res://img/animaNave/asteroids - boss/run7.png" type="Texture" id=14]
[ext_resource path="res://img/animaNave/asteroids - boss/run6.png" type="Texture" id=15]
[ext_resource path="res://img/animaNave/asteroids - boss/run4.png" type="Texture" id=16]
[ext_resource path="res://img/animaNave/asteroids - boss/run3.png" type="Texture" id=17]
[ext_resource path="res://img/animaNave/asteroids - boss/run1.png" type="Texture" id=18]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ), ExtResource( 12 ), ExtResource( 17 ), ExtResource( 16 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 14 ) ],
"loop": true,
"name": "run",
"speed": 8.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "dano",
"speed": 8.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 1 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 11 ) ],
"loop": false,
"name": "explode",
"speed": 12.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 25.2055

[sub_resource type="CircleShape2D" id=3]
radius = 25.9056

[node name="player" type="KinematicBody2D"]
position = Vector2( 512, 300 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="naveSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.307373, 4.91772 )
frames = SubResource( 1 )
animation = "run"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 3 )

[node name="torretaE" type="Position2D" parent="."]
position = Vector2( -14.5399, -3.63498 )

[node name="torretaD" type="Position2D" parent="."]
position = Vector2( 14.5961, -3.63498 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 5.0
autostart = true
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
